Post call with Eric Medvet: added a new grammar in .bnf format, and a Pattern record that acts like an intermediate representation of a Flink CEP Pattern.